fix(bucket-settings-ui): align add header in the CORS modal

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -403,6 +403,7 @@
 
 .HeaderCORS {
   display: flex;
+  margin-top: 14px;
 }
 
 .CORS {
@@ -427,7 +428,7 @@
   width: 10%;
 }
 
-.CORS__actions{
+.CORS__actions {
   width: 10%;
 }
 /* BUCKET SETTINGS PAGE STYLES ENDS HERE */
